<?xml version="1.0" encoding="utf-8"?>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dubg"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/side_nav_bar"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <TextView
                android:id="@+id/tvAdvitiya1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:textColor="#E37973"
                android:text="@string/app_name"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/home_menu_button"
                android:minHeight="36dp"
                android:minWidth="64dp"
                android:text="@string/btn_1"
                android:textColor="#240E48"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/home_menu_button"
                android:minHeight="36dp"
                android:minWidth="64dp"
                android:text="@string/btn_2"
                android:textColor="#240E48"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/home_menu_button"
                android:minHeight="36dp"
                android:minWidth="64dp"
                android:text="@string/btn_3"
                android:textColor="#240E48"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/home_menu_button"
                android:minHeight="36dp"
                android:minWidth="64dp"
                android:text="@string/btn_4"
                android:textColor="#E37973"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/home_menu_button"
                android:minHeight="36dp"
                android:minWidth="64dp"
                android:text="@string/btn_5"
                android:textColor="#E37973"
                android:textSize="18sp" />

        </android.support.design.widget.AppBarLayout>



    <!--    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email" />-->

    </android.support.design.widget.CoordinatorLayout>
